# linuxMonitor

./: .gitignore  LICENSE  README.md  default.conf  deploy.sh  docker-compose.prod.yml  docker-compose.yml  maintenance.sh  nginx.conf  setup-ssl.sh
linux-monitor-backend/: .env.example  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py
linux-monitor-backend/app/: main.py
linux-monitor-backend/app/api/: monitor.py
linux-monitor-backend/app/core/: logging_config.py
linux-monitor-backend/app/models/: monitor.py
linux-monitor-backend/app/services/: monitor_service.py
linux-monitor-backend/config/: logging.yaml
linux-monitor-backend/scripts/: dev.sh  format.sh  lint.sh  setup.sh  test.sh
linux-monitor-backend/tests/: test_main.py
linux-monitor-dashboard/: .env.development  .env.docker  .env.example  .env.production  .env.staging  Dockerfile  README.md  index.html  nginx-websocket.conf  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
linux-monitor-dashboard/src/: App.tsx  config.ts  globals.css  main.tsx
linux-monitor-dashboard/src/components/: error-boundary.tsx  global-error-boundary.tsx  network-details.tsx  process-table.tsx  test-error.tsx
linux-monitor-dashboard/src/components/layout/: header.tsx
linux-monitor-dashboard/src/hooks/: use-websocket.ts
linux-monitor-dashboard/src/services/: api.ts  websocket.ts
linux-monitor-dashboard/src/stores/: monitor-store.ts
linux-monitor-dashboard/src/types/: monitor.ts
linux-monitor-dashboard/src/utils/: format.ts
nginx/: nginx.conf
(+8 files in other folders)
